Fix image from overflow

--- a/css/bucha.css
+++ b/css/bucha.css
@@ -90,3 +90,6 @@ li {
 	width: 65% !important;
 }
 
+.user-testing-img-1 {
+	width: 100%;
+}
